# pvr.hdhomerun

./: .travis.yml  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  appveyor.yml  build2.bat  build_win10.bat  install_win10.bat
depends/common/jsoncpp/: CMakeLists.txt  jsoncpp.txt
depends/common/zlib/: CMakeLists.txt  zlib.txt
lib/rapidxml/: 0001-Win-compile.patch  rapidxml.hpp
pvr.hdhomerun/: changelog.txt
pvr.hdhomerun/resources/: settings.xml
pvr.hdhomerun/resources/language/resource.language.en_au/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_gb/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_us/: strings.po
src/: EPG.cpp  EPG.h  EPG_SD.cpp  EPG_SD.h  EPG_XML.cpp  EPG_XML.h  HDHomeRunTuners.cpp  HDHomeRunTuners.h  Utils.cpp  Utils.h  client.cpp  client.h
